# Streamrecorder

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cmake-single-platform.yml
.github/workflows/: main.yml
Data/: config.ini  resourcestrings.ini  stations.db
Source/: Application.hpp  ApplicationController.hpp  Configuration.hpp  Database.hpp  EventHandler.hpp  IniFile.hpp  Main.cpp  MainController.hpp  MainView.hpp  Metadata.hpp  MetadataParser.hpp  Player.hpp  Recorder.hpp  RecordingError.hpp  ResourceStrings.hpp  ShoutcastStream.hpp  ShoutcastStreamHandler.hpp  Station.hpp  StationDatabaseController.hpp  StationDatabaseView.hpp  StationIdToRecorderMap.hpp  StreamWriter.hpp  Streamrecorder.hpp
StationDatabase/: create_database.bat  schema.txt  stations.txt
